modify carousel skin

--- a/app/components/Slider/index.less
+++ b/app/components/Slider/index.less
@@ -1,5 +1,5 @@
 .carousel {
-    background-color:rgba(0, 140, 255, 0.904);
+    background-color: #364d79;
     ul {
         display: flex;
         flex-wrap: wrap;
